--- a/app/src/main/res/layout/find_friend_design.xml
+++ b/app/src/main/res/layout/find_friend_design.xml
@@ -57,7 +57,10 @@
             android:textColor="@android:color/white"
             android:text="Accept Friend Request"
             android:textAllCaps="false"
-            android:textSize="16dp">
+            android:textSize="16dp"
+            android:visibility="gone"
+            >
+
 
         </Button>
         <Button
@@ -74,7 +77,10 @@
             android:textColor="@android:color/white"
             android:text="Cancel Friend Request"
             android:textAllCaps="false"
-            android:textSize="16dp">
+            android:textSize="16dp"
+            android:visibility="gone"
+            >
+
 
         </Button>
 
